--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
     let classifier;
 let label = 'waiting...';
-let modelURL = 'https://storage.googleapis.com/tm-model/H3kzwi89x/';
+let modelURL = 'https://storage.googleapis.com/tm-model/Xo8ntoAb6/';
 let video;
 let flipVideo;
 function preload() {
